# Projex-Project-Management

server/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
server/app/: main.py
server/app/alembic/: env.py
server/app/alembic/versions/: c4e323a6547d_added_workspace_invitation_model_and_.py  edba47b083ea_initial_migration.py
server/app/api/: deps.py
server/app/api/v1/: __init__.py  auth.py  tag.py  workspace.py
server/app/core/: config.py  database.py  security.py
server/app/exceptions/: auth.py  base.py  handler.py  tag.py  user.py  workspace.py
server/app/models/: __init__.py  comment.py  project.py  tag.py  task.py  timesheet.py  user.py  workspace.py
server/app/schemas/: auth.py  comment.py  project.py  tag.py  workspace.py
server/app/seed/: main.py  tag.py  user.py
server/app/services/: project_service.py  redis_service.py  tag_service.py  user_service.py  workspace_service.py
server/app/tests/: conftest.py
server/app/tests/api/: deps.py
server/app/tests/api/v1/: test_auth.py  test_auth_api.py  test_tag_api.py
server/app/tests/services/: test_redis_service.py  test_tag_service.py  test_user_service.py
server/app/utils/: text.py  workspace_slug.py
