[project]
name = "project_server"
version = "1.0"
description = "Project - Project Management Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.118.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.4.0",
    "sqlmodel>=0.0.27",
]
